@@ -11,6 +11,7 @@ next
 -parse_evidence and p_func: added to correct section of the install file (previously only in _last section)
 -added bsml_qc component
 -added overlap_analysis component
+-added lipop component
 
 ergatis-v2r10b1
 ---------------
